// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`kol-input-file should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _accessKey="V" 1`] = `
<kol-input-file _placeholder="Hier steht ein Platzhaltertext">
  <template shadowrootmode="open">
    <div class="file kol-form-field kol-input-file">
      <label class="kol-form-field__label" htmlfor="input-file-nonce" id="input-file-label-nonce">
        <span class="kol-form-field__label-text kol-span kol-span--has-badge">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__slot" hidden="">
              <slot name="expert"></slot>
            </span>
            <kbd aria-hidden="true" class="badge-text-hint">
              V
            </kbd>
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__container">
            <span class="kol-input-container__filename">
              kol-filename-text
            </span>
            <input accesskey="V" autocapitalize="off" autocorrect="off" class="kol-input" id="input-file-nonce" name="field" type="file">
            <kol-button-wc _label="kol-data-browse-text" _variant="primary" class="kol-input-container__button"></kol-button-wc>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-input-file>
`;

exports[`kol-input-file should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _alert=true 1`] = `
<kol-input-file _alert="" _placeholder="Hier steht ein Platzhaltertext">
  <template shadowrootmode="open">
    <div class="file kol-form-field kol-input-file">
      <label class="kol-form-field__label" htmlfor="input-file-nonce" id="input-file-label-nonce">
        <span class="kol-form-field__label-text kol-span">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__slot" hidden="">
              <slot name="expert"></slot>
            </span>
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__container">
            <span class="kol-input-container__filename">
              kol-filename-text
            </span>
            <input autocapitalize="off" autocorrect="off" class="kol-input" id="input-file-nonce" name="field" type="file">
            <kol-button-wc _label="kol-data-browse-text" _variant="primary" class="kol-input-container__button"></kol-button-wc>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-input-file>
`;

exports[`kol-input-file should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _disabled=true 1`] = `
<kol-input-file _placeholder="Hier steht ein Platzhaltertext">
  <template shadowrootmode="open">
    <div class="file kol-form-field kol-form-field--disabled kol-input-file">
      <label class="kol-form-field__label" htmlfor="input-file-nonce" id="input-file-label-nonce">
        <span class="kol-form-field__label-text kol-span">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__slot" hidden="">
              <slot name="expert"></slot>
            </span>
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container kol-input-container--disabled">
          <div class="kol-input-container__container">
            <span class="kol-input-container__filename">
              kol-filename-text
            </span>
            <input autocapitalize="off" autocorrect="off" class="kol-input kol-input--disabled" disabled="" id="input-file-nonce" name="field" type="file">
            <kol-button-wc _disabled="" _label="kol-data-browse-text" _variant="primary" class="kol-input-container__button"></kol-button-wc>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-input-file>
`;

exports[`kol-input-file should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _hint="Hint" 1`] = `
<kol-input-file _placeholder="Hier steht ein Platzhaltertext">
  <template shadowrootmode="open">
    <div class="file kol-form-field kol-input-file">
      <label class="kol-form-field__label" htmlfor="input-file-nonce" id="input-file-label-nonce">
        <span class="kol-form-field__label-text kol-span">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__slot" hidden="">
              <slot name="expert"></slot>
            </span>
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__container">
            <span class="kol-input-container__filename">
              kol-filename-text
            </span>
            <input aria-describedby="input-file-hint-nonce" autocapitalize="off" autocorrect="off" class="kol-input" id="input-file-nonce" name="field" type="file">
            <kol-button-wc _label="kol-data-browse-text" _variant="primary" class="kol-input-container__button"></kol-button-wc>
          </div>
        </div>
      </div>
      <span class="kol-form-field__hint" id="input-file-hint-nonce">
        Hint
      </span>
    </div>
  </template>
</kol-input-file>
`;

exports[`kol-input-file should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _icons={"left":{"icon":"codicon codicon-arrow-left"},"right":{"icon":"codicon codicon-arrow-right"}} 1`] = `
<kol-input-file _placeholder="Hier steht ein Platzhaltertext">
  <template shadowrootmode="open">
    <div class="file kol-form-field kol-input-file">
      <label class="kol-form-field__label" htmlfor="input-file-nonce" id="input-file-label-nonce">
        <span class="kol-form-field__label-text kol-span">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__slot" hidden="">
              <slot name="expert"></slot>
            </span>
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__adornment kol-input-container__adornment--start">
            <i aria-hidden="true" class="codicon codicon-arrow-left kol-icon kol-icon__icon kol-input-container__icon" role="presentation"></i>
          </div>
          <div class="kol-input-container__container">
            <span class="kol-input-container__filename">
              kol-filename-text
            </span>
            <input autocapitalize="off" autocorrect="off" class="kol-input" id="input-file-nonce" name="field" type="file">
            <kol-button-wc _label="kol-data-browse-text" _variant="primary" class="kol-input-container__button"></kol-button-wc>
          </div>
          <div class="kol-input-container__adornment kol-input-container__adornment--end">
            <i aria-hidden="true" class="codicon codicon-arrow-right kol-icon kol-icon__icon kol-input-container__icon" role="presentation"></i>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-input-file>
`;

exports[`kol-input-file should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _icons={"left":{"icon":"codicon codicon-arrow-left"}} 1`] = `
<kol-input-file _placeholder="Hier steht ein Platzhaltertext">
  <template shadowrootmode="open">
    <div class="file kol-form-field kol-input-file">
      <label class="kol-form-field__label" htmlfor="input-file-nonce" id="input-file-label-nonce">
        <span class="kol-form-field__label-text kol-span">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__slot" hidden="">
              <slot name="expert"></slot>
            </span>
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__adornment kol-input-container__adornment--start">
            <i aria-hidden="true" class="codicon codicon-arrow-left kol-icon kol-icon__icon kol-input-container__icon" role="presentation"></i>
          </div>
          <div class="kol-input-container__container">
            <span class="kol-input-container__filename">
              kol-filename-text
            </span>
            <input autocapitalize="off" autocorrect="off" class="kol-input" id="input-file-nonce" name="field" type="file">
            <kol-button-wc _label="kol-data-browse-text" _variant="primary" class="kol-input-container__button"></kol-button-wc>
          </div>
          <div class="kol-input-container__adornment kol-input-container__adornment--end"></div>
        </div>
      </div>
    </div>
  </template>
</kol-input-file>
`;

exports[`kol-input-file should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _icons={"right":{"icon":"codicon codicon-arrow-right"}} 1`] = `
<kol-input-file _placeholder="Hier steht ein Platzhaltertext">
  <template shadowrootmode="open">
    <div class="file kol-form-field kol-input-file">
      <label class="kol-form-field__label" htmlfor="input-file-nonce" id="input-file-label-nonce">
        <span class="kol-form-field__label-text kol-span">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__slot" hidden="">
              <slot name="expert"></slot>
            </span>
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__adornment kol-input-container__adornment--start"></div>
          <div class="kol-input-container__container">
            <span class="kol-input-container__filename">
              kol-filename-text
            </span>
            <input autocapitalize="off" autocorrect="off" class="kol-input" id="input-file-nonce" name="field" type="file">
            <kol-button-wc _label="kol-data-browse-text" _variant="primary" class="kol-input-container__button"></kol-button-wc>
          </div>
          <div class="kol-input-container__adornment kol-input-container__adornment--end">
            <i aria-hidden="true" class="codicon codicon-arrow-right kol-icon kol-icon__icon kol-input-container__icon" role="presentation"></i>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-input-file>
`;

exports[`kol-input-file should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _msg={"_type":"error","_description":"Es ist ein Fehler aufgetreten"} _hideMsg=true _touched=true 1`] = `
<kol-input-file _placeholder="Hier steht ein Platzhaltertext" _touched="">
  <template shadowrootmode="open">
    <div class="file kol-form-field kol-form-field--error kol-form-field--hidden-msg kol-form-field--msg-type-error kol-form-field--touched kol-input-file">
      <label class="kol-form-field__label" htmlfor="input-file-nonce" id="input-file-label-nonce">
        <span class="kol-form-field__label-text kol-span">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__slot" hidden="">
              <slot name="expert"></slot>
            </span>
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container kol-input-container--error">
          <div class="kol-input-container__container">
            <span class="kol-input-container__filename">
              kol-filename-text
            </span>
            <input aria-describedby="input-file-error-nonce" autocapitalize="off" autocorrect="off" class="kol-input kol-input--error kol-input--touched" id="input-file-nonce" name="field" type="file">
            <kol-button-wc _label="kol-data-browse-text" _variant="primary" class="kol-input-container__button"></kol-button-wc>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-input-file>
`;

exports[`kol-input-file should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _msg={"_type":"error","_description":"Es ist ein Fehler aufgetreten"} 1`] = `
<kol-input-file _placeholder="Hier steht ein Platzhaltertext">
  <template shadowrootmode="open">
    <div class="file kol-form-field kol-input-file">
      <label class="kol-form-field__label" htmlfor="input-file-nonce" id="input-file-label-nonce">
        <span class="kol-form-field__label-text kol-span">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__slot" hidden="">
              <slot name="expert"></slot>
            </span>
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__container">
            <span class="kol-input-container__filename">
              kol-filename-text
            </span>
            <input aria-describedby="input-file-msg-nonce" autocapitalize="off" autocorrect="off" class="kol-input" id="input-file-nonce" name="field" type="file">
            <kol-button-wc _label="kol-data-browse-text" _variant="primary" class="kol-input-container__button"></kol-button-wc>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-input-file>
`;

exports[`kol-input-file should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _readOnly=true 1`] = `
<kol-input-file _placeholder="Hier steht ein Platzhaltertext" _readonly="">
  <template shadowrootmode="open">
    <div class="file kol-form-field kol-input-file">
      <label class="kol-form-field__label" htmlfor="input-file-nonce" id="input-file-label-nonce">
        <span class="kol-form-field__label-text kol-span">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__slot" hidden="">
              <slot name="expert"></slot>
            </span>
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__container">
            <span class="kol-input-container__filename">
              kol-filename-text
            </span>
            <input autocapitalize="off" autocorrect="off" class="kol-input" id="input-file-nonce" name="field" type="file">
            <kol-button-wc _label="kol-data-browse-text" _variant="primary" class="kol-input-container__button"></kol-button-wc>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-input-file>
`;

exports[`kol-input-file should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _shortKey="S" 1`] = `
<kol-input-file _placeholder="Hier steht ein Platzhaltertext">
  <template shadowrootmode="open">
    <div class="file kol-form-field kol-input-file">
      <label class="kol-form-field__label" htmlfor="input-file-nonce" id="input-file-label-nonce">
        <span class="kol-form-field__label-text kol-span kol-span--has-badge">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__slot" hidden="">
              <slot name="expert"></slot>
            </span>
            <kbd aria-hidden="true" class="badge-text-hint">
              S
            </kbd>
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__container">
            <span class="kol-input-container__filename">
              kol-filename-text
            </span>
            <input aria-keyshortcuts="S" autocapitalize="off" autocorrect="off" class="kol-input" id="input-file-nonce" name="field" type="file">
            <kol-button-wc _label="kol-data-browse-text" _variant="primary" class="kol-input-container__button"></kol-button-wc>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-input-file>
`;

exports[`kol-input-file should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _smartButton={"_icons":["codicon codicon-eye"],"_hideLabel":true,"_label":"einblenden"} 1`] = `
<kol-input-file _placeholder="Hier steht ein Platzhaltertext">
  <template shadowrootmode="open">
    <div class="file kol-form-field kol-input-file">
      <label class="kol-form-field__label" htmlfor="input-file-nonce" id="input-file-label-nonce">
        <span class="kol-form-field__label-text kol-span">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__slot" hidden="">
              <slot name="expert"></slot>
            </span>
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__adornment kol-input-container__adornment--start"></div>
          <div class="kol-input-container__container">
            <span class="kol-input-container__filename">
              kol-filename-text
            </span>
            <input autocapitalize="off" autocorrect="off" class="kol-input" id="input-file-nonce" name="field" type="file">
            <kol-button-wc _label="kol-data-browse-text" _variant="primary" class="kol-input-container__button"></kol-button-wc>
          </div>
          <div class="kol-input-container__adornment kol-input-container__adornment--end">
            <kol-button-wc _hidelabel="" _label="einblenden" class="kol-input-container__smart-button"></kol-button-wc>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-input-file>
`;

exports[`kol-input-file should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" _touched=true 1`] = `
<kol-input-file _placeholder="Hier steht ein Platzhaltertext" _touched="">
  <template shadowrootmode="open">
    <div class="file kol-form-field kol-form-field--touched kol-input-file">
      <label class="kol-form-field__label" htmlfor="input-file-nonce" id="input-file-label-nonce">
        <span class="kol-form-field__label-text kol-span">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__slot" hidden="">
              <slot name="expert"></slot>
            </span>
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__container">
            <span class="kol-input-container__filename">
              kol-filename-text
            </span>
            <input autocapitalize="off" autocorrect="off" class="kol-input kol-input--touched" id="input-file-nonce" name="field" type="file">
            <kol-button-wc _label="kol-data-browse-text" _variant="primary" class="kol-input-container__button"></kol-button-wc>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-input-file>
`;

exports[`kol-input-file should render with _label="Label" _name="field" _placeholder="Hier steht ein Platzhaltertext" 1`] = `
<kol-input-file _placeholder="Hier steht ein Platzhaltertext">
  <template shadowrootmode="open">
    <div class="file kol-form-field kol-input-file">
      <label class="kol-form-field__label" htmlfor="input-file-nonce" id="input-file-label-nonce">
        <span class="kol-form-field__label-text kol-span">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__slot" hidden="">
              <slot name="expert"></slot>
            </span>
          </span>
        </span>
      </label>
      <div class="kol-form-field__input">
        <div class="kol-input-container">
          <div class="kol-input-container__container">
            <span class="kol-input-container__filename">
              kol-filename-text
            </span>
            <input autocapitalize="off" autocorrect="off" class="kol-input" id="input-file-nonce" name="field" type="file">
            <kol-button-wc _label="kol-data-browse-text" _variant="primary" class="kol-input-container__button"></kol-button-wc>
          </div>
        </div>
      </div>
    </div>
  </template>
</kol-input-file>
`;
